Add new machine cfgs for imx8mmedyev
Update method for setting default device tree

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_edyev = "^${LAYERDIR}/"
 BBFILE_PRIORITY_example = "5"
 
 
-KERNEL_DEVICETREE_append += " freescale/edyev-imx8m.dtb"
+#KERNEL_DEVICETREE_append += " freescale/edyev-imx8m.dtb"
